Time: 24 ms (55.71%), Space: 57.9 MB (15.5%) - LeetHub